@@ -88,7 +88,17 @@
 
 ##  升级说明：
 
-升级日志中未提及数据库的均可直接覆盖升级！覆盖升级时保留配置文件. 数据库文件. 模板目录即可！
+* 使用后台在线升级（推荐）
+支持跨版本升级，会自动升级数据库及代码文件。
+
+* 使用升级包升级：
+不支持跨版本直接升级，需要一一升级，直接用升级包覆盖，
+同时如果升级包中有升级数据库脚本时需要同时升级数据库。
+
+* 使用全包升级：
+支持跨版本升级，保留配置文件、模板文件、静态文件目录、数据库文件，其余全部用新版替换，
+同时如果涉及到的中间版本有升级数据库，需要同时使用升级包中数据库脚本一一升级；
+
 
 ##  关于授权码：
 授权码只为更好的统计安装情况，为离线验证，大家可在官网免费获取永久授权码。
@@ -99,8 +109,6 @@
 
 技术交流群：137083872
 
-官方网站：http://www.pbootcms.com/
-
-演示网站：http://demo.pbootcms.com/
+官方网站：https://www.pbootcms.com/
 
 码云地址：https://gitee.com/hnaoyun/PbootCMS 
