@@ -1,10 +1,10 @@
 <?php
 return array(
     // 应用版本
-    'app_version' => '1.1.9',
+    'app_version' => '1.2.0',
     
     // 发布时间
-    'release_time' => '20180817'
+    'release_time' => '20180830'
 
 );
  
