@@ -1,4 +1,10 @@
-﻿PbootCMS V1.1.9 build 2018-08-17
+﻿PbootCMS V1.2.0 build 2018-08-30
+1、系统优化及安全修复；
+2、修复API搜索与页面实现不统一；
+3、优化后台内容页栏目显示逻辑；
+4、新增后台轮播、链接页面批量排序；
+
+PbootCMS V1.1.9 build 2018-08-17
 1、系统优化及安全修复(重要)；
 2、修复自定义表单Mysql时添加失败问题；
 3、修复后台模板一些小错误；
